# server

./: .gitignore  API.md  README.md  dear-college.cabal  default.nix  shell.nix  xaturator.cabal
client/: README.md  package-lock.json  package.json  webpack.config.js
client/src/: index.js
frontend/: README.md  default.nix  package-lock.json  package.json  vite.config.js
frontend/src/css/: styles.scss
frontend/src/js/: index.js
getting-started/: for-authors.md  for-instructors.md
src/: App.hs  AppM.hs  Auth.hs  Backend.hs  Configuration.hs  Courses.hs  Favicon.hs  FindFile.hs  Hashcash.hs  HttpData.hs  JsonWorkProof.hs  Main.hs  Markdown.hs  Model.hs  OIDC.hs  Repos.hs  User.hs
src/OIDC/: Types.hs
src/Views/: A11y.hs  Branding.hs  Footer.hs  Header.hs  Page.hs
