cabal-version:      2.4
name:               dear-college 
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Jim Fowler
maintainer:         kisonecat@gmail.com 

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable dear-college 
  ghc-options: -Wall
  -- .hs or .lhs file containing the Main module.
  main-is:             Main.hs

  other-modules:       Configuration
                     , App
                     , AppM
                     , OIDC
                     , OIDC.Types
                     , Repos
                     , Views.A11y
                     , Views.Branding
                     , Views.Header
                     , Views.Footer
                     , Views.Page
                     , User
                     , Auth
                     , Markdown
                     , FindFile
                     , Courses
                     , Backend
                     , Model
  
  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:       base
                     , aeson
                     , hedis
                     , string-conversions
                     , bytestring
                     , base64-bytestring
                     , resource-pool
                     , containers
                     , http-api-data
                     , http-types
                     , http-conduit
                     , jose
                     , lens
                     , exceptions
                     , monad-logger
                     , mtl
                     , servant
                     , servant-auth
                     , servant-server
                     , servant-auth-server
                     , servant-blaze
                     , blaze-html
                     , blaze-markup
                     , oidc-client
                     , http-client
                     , http-client-tls
                     , random
                     , wai-logger
                     , dotenv
                     , stm
                     , hedis
                     , text
                     , transformers
                     , wai
                     , warp
                     , network-uri
                     , time
                     , directory
                     , filepath
                     , utf8-string
                     , cookie
                     , cmark
                     , tagsoup
                     , memory
                     , cryptonite
                     , monad-time
                     , byteable
                                          
  -- Directories containing source files.
  hs-source-dirs:      src

  -- Base language which the package is written in.
  default-language:    Haskell2010

test-suite dear-college-test 
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
